Fix buttons look weird on iOS Mobile Safari

--- a/src/index.css
+++ b/src/index.css
@@ -389,6 +389,7 @@ abbr {
   height: 32px;
   line-height: 34px;
   cursor: pointer;
+  padding: 0;
 }
 .exit-btn:hover {
   filter: saturate(2);
